--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build"
   ],
   "scripts": {
+    "prepare": "npm run build-ts",
     "build": "rimraf build && rollup -c rollup.config.js",
     "test": "jest"
   },
