--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,10 @@
     "esModuleInterop": true,
     "strict": true
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  },
   "exclude": ["build"]
 }
