--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "./build/index.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
+  "type": "module",
   "files": [
     "build"
   ],
   "scripts": {
     "build": "rimraf build && rollup -c rollup.config.js",
-    "test": "jest",
-    "lint": "eslint src --ext .ts"
+    "test": "jest"
   },
   "keywords": [
     "minswap",
@@ -32,29 +32,29 @@
   },
   "homepage": "https://github.com/minswap/blockfrost-adapter#readme",
   "dependencies": {
-    "@blockfrost/blockfrost-js": "^4.1.0",
+    "@blockfrost/blockfrost-js": "^5.3.1",
     "@minswap/tiny-invariant": "^1.2.0",
-    "big.js": "^6.1.1"
+    "big.js": "^6.1.1",
+    "lucid-cardano": "^0.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
+    "jest-environment-jsdom": "^29.5.0",
     "@types/big.js": "^6.1.3",
     "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "babel-jest": "^28.0.1",
     "esbuild": "^0.14.38",
     "eslint": "^8.13.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "fast-check": "^2.24.0",
-    "jest": "^28.0.1",
+    "jest": "^29.3.1",
+    "jest-dom": "^4.0.0",
     "rollup": "^2.70.2",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-esbuild": "^4.9.1",
-    "ts-node": "^10.7.0",
+    "ts-jest": "^29.0.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
   }
 }
