--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "rimraf build && rollup -c rollup.config.js",
+    "prepare": "nom run build",
     "test": "jest"
   },
   "keywords": [
